--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "mongodb": "^6.17.0",
+    "multer": "^2.0.1",
     "next": "latest",
     "next-auth": "^4.24.11",
     "next-connect": "^0.12.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-syntax-highlighter": "^15.6.1",
     "sass": "^1.89.2"
   },
   "devDependencies": {
